# m5-demand-forecasting

./: .gitignore  CHANGELOG.md  Makefile  PROJECT_LOG.md  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: config.yaml
configs/data/: m5.yaml
configs/evaluation/: default.yaml
configs/features/: default.yaml
configs/model/: baselines.yaml  deepar.yaml  lightgbm.yaml  tft.yaml  xgboost.yaml
configs/training/: default.yaml
docs/: INTERVIEW_PREP.md  TECHNICAL_REPORT.md
docs/phases/: PHASE_01_demand_forecasting.md  PHASE_02_time_series_fundamentals.md  PHASE_03_literature_review.md  PHASE_04_project_planning.md  PHASE_05_dataset.md  PHASE_06_eda.md  PHASE_07_feature_engineering.md  PHASE_08_baselines.md  PHASE_09_gradient_boosting.md  PHASE_10_deepar.md  PHASE_11_temporal_transformer.md  PHASE_12_reconciliation.md  PHASE_13_evaluation.md  PHASE_14_promotions_events.md  PHASE_15_error_analysis.md  PHASE_16_research_analysis.md  PHASE_17_engineering.md  PHASE_18_documentation.md
reports/figures/: eda_stats.json
scripts/: analyze_errors.py  analyze_promos.py  analyze_research.py  build_features.py  build_panel.py  download_data.py  evaluate.py  exp_deepar_mean.py  final_eval.py  reconcile.py  run_eda.py  train.py
src/m5forecast/: __init__.py
src/m5forecast/analysis/: __init__.py  eda.py  errors.py  promotions.py  research.py
tests/: test_baselines.py  test_config.py  test_data_pipeline.py  test_deepar.py  test_features.py  test_gbm.py  test_hierarchy.py  test_integration.py  test_tft.py  test_wrmsse.py
(+33 files in other folders)
