[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "m5forecast"
version = "0.1.0"
description = "Hierarchical demand forecasting on the M5 dataset: gradient boosting vs DeepAR-style vs temporal transformers, with 12-level forecast reconciliation"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]          # so `from scripts... import` works in tests

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]   # errors, pyflakes, import-sort, pyupgrade, bugbear
ignore = ["E501"]                     # line length handled by formatter, not enforced hard
